responsive fixes for footer on mobile screens

--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -151,3 +151,18 @@ $profile-border-color: #ebebeb;
     text-decoration: underline;
   }
 }
+@media (max-width: $screen-xs) {
+  .summary {
+    .profile-photo {
+      width: 80px;
+      height: 80px;
+      margin-right:30px;
+      margin-top:-90px;
+      border-radius: 70px;
+      right: 0;
+      position: absolute;
+      border: 2px solid $profile-border-color;
+    }
+  }
+}
+
